Fix zooming after changing image resolution

We should take zoom-resolution into account when changing
updating visual document size after changing document resolution.

BUG:421797